Fix card missing wildcards spacing

--- a/src/shared/shared.css
+++ b/src/shared/shared.css
@@ -820,6 +820,10 @@ span {
     background: url(../images/not_owned.png) center no-repeat;
 }
 
+.card_tile_container_outer {
+    width: 100%;
+    display: flex;
+}
 
 .card_tile_container_flat {
     display: flex;
@@ -894,9 +898,15 @@ span {
     margin: 0 6px 0 auto;
 }
 
+.not_owned_sprite_empty {
+    margin-top: 4px;
+    min-width: 24px;
+    width: 24px;
+    height: 24px;
+    position: relative;
+}
+
 .not_owned_sprite_flat {
-    margin-left: -24px;
-    left: 24px;
     margin-top: 4px;
     min-width: 24px;
     width: 24px;
